--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bnc-onboard": "^1.17.1",
     "core-js": "^3.6.5",
     "nuxt": "^2.14.12",
+    "nuxt-class-component": "^1.3.0",
     "web3": "^1.3.1",
     "yarn": "^1.22.10"
   },
