--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "onboard-nuxt",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "scripts": {
     "dev": "HOST=0.0.0.0 nuxt",
@@ -16,12 +16,16 @@
     "add": "^2.0.6",
     "bnc-onboard": "^1.17.1",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "nuxt": "^2.14.12",
     "nuxt-class-component": "^1.3.0",
+    "vue": "^2.6.12",
     "web3": "^1.3.1",
     "yarn": "^1.22.10"
   },
   "devDependencies": {
+    "@nuxt/cli": "^2.14.12",
+    "@nuxt/core": "^2.14.12",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
     "babel-eslint": "^10.1.0",
@@ -29,6 +33,9 @@
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "prettier": "^2.1.2"
+    "prettier": "^2.1.2",
+    "webpack": "^5.11.1",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5"
   }
 }
