--- a/package.json
+++ b/package.json
@@ -21,21 +21,20 @@
     "nuxt-class-component": "^1.3.0",
     "vue": "^2.6.12",
     "web3": "^1.3.1",
-    "yarn": "^1.22.10"
-  },
-  "devDependencies": {
+    "yarn": "^1.22.10",
     "@nuxt/cli": "^2.14.12",
     "@nuxt/core": "^2.14.12",
     "@nuxtjs/eslint-config": "^3.1.0",
     "@nuxtjs/eslint-module": "^2.0.0",
+    "@babel/core": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
-    "webpack": "^5.11.1",
-    "@babel/core": "^7.12.10",
-    "@babel/runtime": "^7.12.5"
-  }
+    "webpack": "^5.11.1"
+  },
+  "devDependencies": {}
 }
